# logos-scaffold

./: .gitignore  ADR.md  CONTRIBUTING.md  Cargo.toml  DOGFOODING.md  FURPS.md  README.md  SECURITY.md  SPEC.md  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  rate-limit-allowlist.txt
.github/workflows/: ci.yml  pr-rate-limit.yml  publish-crate.yml
completions/: README.md  _logos-scaffold
docs/: basecamp-module-requirements.md
docs/specs/: run-reset.md
dogfood/: AGENT.md  Dockerfile  bootstrap.sh  run-container.sh  run-scenarios.sh
skills/lgs-cli/: SKILL.md
specs/: README.md
specs/adr/: ADR-0001-spec-driven-docs-separation.md  ADR-0002-command-output-contracts.md
specs/analysis/: SPEC-GAP-ANALYSIS.md
specs/furps/: FURPS-0001-cli-surface-and-behavior.md  FURPS-0002-project-lifecycle-and-repo-management.md  FURPS-0003-runtime-ops-localnet-wallet-doctor-report.md  FURPS-0004-basecamp-workflow.md
src/: cli.rs  cli_help.rs  config.rs  constants.rs  doctor_checks.rs  error.rs  lib.rs  localnet.rs  main.rs  migrate.rs  model.rs  process.rs  project.rs  repo.rs  scaffold.rs  state.rs  wallet.rs
src/commands/: basecamp.rs  build.rs  client.rs  completions.rs  deploy.rs  doctor.rs  idl.rs  init.rs  install.rs  interact.rs  localnet.rs  migrate.rs  mod.rs  new.rs  report.rs  run.rs  run_state.rs  self_test.rs  setup.rs  slice.rs  spel.rs  verify.rs  wallet.rs  wallet_support.rs
src/template/: copy.rs  mod.rs  project.rs  runners.rs  skills.rs
tasks/: todo-build-portable-reset.md
templates/basecamp-qml/: .gitignore  Main.qml  README.md  flake.nix  metadata.json
templates/default/: .env.local  Cargo.toml  Cargo.toml.template  README.md
templates/default/.scaffold/: commands.md
templates/lez-framework/: .env.local  .gitignore  Cargo.toml  Cargo.toml.template  README.md
templates/lez-framework/.scaffold/: commands.md
templates/lez-framework/.scaffold/hooks/: post-scaffold.sh
templates/lez-framework/crates/lez-client-gen/: Cargo.toml.template
templates/lez-framework/crates/lez-client-gen/src/: main.rs
templates/lez-framework/crates/lssa-client-gen/: Cargo.toml.template
templates/lez-framework/crates/spel-client-gen/: Cargo.toml.template
templates/lez-framework/crates/spel-client-gen/src/: main.rs
templates/lez-framework/idl/: lez_counter.json
templates/lez-framework/methods/: build.rs
templates/lez-framework/methods/guest/: Cargo.toml
templates/lez-framework/src/: lib.rs
templates/lssa-lang/: Cargo.toml  README.md
templates/lssa-lang/.scaffold/: commands.md
templates/lssa-lang/crates/lssa-client-gen/: Cargo.toml
templates/lssa-lang/crates/lssa-client-gen/src/: lib.rs  main.rs
templates/lssa-lang/crates/lssa-idl-spec/: Cargo.toml
templates/lssa-lang/crates/lssa-idl-spec/src/: lib.rs
templates/lssa-lang/crates/lssa-lang/: Cargo.toml
templates/lssa-lang/crates/lssa-lang-macros/: Cargo.toml
templates/lssa-lang/crates/lssa-lang-macros/src/: lib.rs
templates/lssa-lang/crates/lssa-lang/src/: lib.rs
templates/lssa-lang/idl/: token_pilot.json
templates/lssa-lang/methods/guest/: Cargo.toml
templates/lssa-lang/src/: lib.rs
tests/: cli.rs  scaffold_integration.rs
