[package]
name = "logos-scaffold"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.32", features = ["derive"] }
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
