[package]
name = "logos-scaffold"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.81"

[dependencies]
anyhow = "1.0"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
include_dir = "0.7.4"
flate2 = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
thiserror = "2.0"
ureq = { version = "2.12", features = ["json"] }

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.18.0"
