[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[workspace.package]
license = "MIT or Apache-2.0"

[workspace]
resolver = "3"
members = [
  ".",
  "methods",
  "methods/guest",
]

[workspace.dependencies]
nssa = { git = "https://github.com/logos-blockchain/lssa.git", rev = "{{lssa_pin}}" }
nssa_core = { git = "https://github.com/logos-blockchain/lssa.git", rev = "{{lssa_pin}}" }
wallet = { git = "https://github.com/logos-blockchain/lssa.git", rev = "{{lssa_pin}}" }
common = { git = "https://github.com/logos-blockchain/lssa.git", rev = "{{lssa_pin}}" }

risc0-zkvm = { version = "3.0.5", features = ["std"] }
risc0-build = "3.0.5"

lez-framework = { git = "https://github.com/jimmy-claw/lez-framework.git", rev = "1e146970d2bba861a32fd3a8b4e13b1e6ff4114d" }
lez-framework-core = { git = "https://github.com/jimmy-claw/lez-framework.git", rev = "1e146970d2bba861a32fd3a8b4e13b1e6ff4114d" }

hex = "0.4.3"
bytemuck = "1.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
clap = { version = "4.5.42", features = ["derive", "env"] }
tokio = { version = "1.28.2", features = ["macros", "net", "rt-multi-thread", "sync", "fs"] }
borsh = { version = "1.5", features = ["derive"] }

[dependencies]
nssa.workspace = true
nssa_core.workspace = true
wallet.workspace = true
common.workspace = true
example_program_deployment_methods = { path = "methods" }

serde.workspace = true
clap.workspace = true
tokio = { workspace = true, features = ["macros"] }
